--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Test Site</title>
+    <title>My Fucking Test Site</title>
     <link rel="stylesheet"
           href="{{ url_for('bootstrap.static', filename='css/bootstrap.min.css') }}">
 </head>
