--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
           href="{{ url_for('bootstrap.static', filename='css/bootstrap.min.css') }}">
 </head>
 <body class="container mt-5">
-    <h1 class="text-primary">Welcome to My Dockerized Site 🚀</h1>
+    <h1 class="text-primary">Welcome to My Site 🚀</h1>
     <h3>Users in Database:</h3>
     <ul class="list-group">
         {% for user in users %}
